# ldmx-tb-online

./: .gitignore  .gitmodules  README.md
example_scripts/: prbs_source.py
examples/: dash_test.py  prbs_dest.py  prbs_source_nogui.py
near-offline/hcal/: .gitignore  7-in-1.py  DumbPulseFitter.py  HCal-dqm-offline.py  LED-finder.py  SampleHcalAna.py  SimpleEventDisplay.py  align.py  align_cfg.py  decode-with-pedestals.py  decode.py  event_display.py  map.py  (+7 more)
reformat/: .gitignore  CMakeLists.txt  README.md  usage.md
reformat/HexaBoard/: CMakeLists.txt  README.md  config.py
reformat/HexaBoard/include/HexaBoard/: HGCROCv2RawDataFile.h
reformat/HexaBoard/python/: hgcroc.py
reformat/HexaBoard/src/HexaBoard/: HGCROCv2RawDataFile.cxx
reformat/Reformat/: CMakeLists.txt  README.md
reformat/Reformat/app/: reformat.cxx
reformat/Reformat/include/Reformat/: Converter.h  EventPacket.h  RawDataFile.h  SpillwiseConverter.h
reformat/Reformat/include/Reformat/Utility/: Hex.h  Reader.h  TimestampCloud.h
reformat/Reformat/python/: reformat.py
reformat/Reformat/src/Reformat/: Converter.cxx  RawDataFile.cxx  SpillwiseConverter.cxx  TestFile.cxx
reformat/Reformat/test/: CMakeLists.txt  basic.py
reformat/TestBeam/: CMakeLists.txt  README.md  config.py  hcal_cfg.py
reformat/TestBeam/include/TestBeam/: HGCROCv2RawDataFile.h
reformat/TestBeam/python/: testbeam.py
reformat/TestBeam/src/TestBeam/: FiberTrackerRawFile.cxx  HGCROCv2RawDataFile.cxx  PolarfireRawFile.cxx  TrigScintEventGroupedRawFile.cxx  TrigScintTwoFibersRawFile.cxx  WhiteRabbitRawFile.cxx
reformat/UMNTestStand/: CMakeLists.txt  README.md  config.py
reformat/UMNTestStand/include/UMNTestStand/: HGCROCv2RawDataFile.h
reformat/UMNTestStand/python/: umn.py
reformat/UMNTestStand/src/UMNTestStand/: HGCROCv2RawDataFile.cxx
software/: .gitignore  CMakeLists.txt  README.md  non-conda-build.md  runC_TSMonitor.sh  run_hcal.sh  run_hcal_nogui.sh  run_hcal_pf0.sh  run_hcal_pf1.sh  setup_DarkDaq.sh  setup_daq.sh  setup_filereader.sh  start_monitoring.sh  start_run.sh  test_hcal_pf.sh
software/cmake/: BuildMacros.cmake
software/data/: DumbReconConditions.csv  testbeam_connections.csv
software/emulators/: CMakeLists.txt
software/emulators/app/: emulator.cxx  rce_prbs_tcp_client.cxx
software/emulators/include/emulators/: Generator.h  HCalGenerator.h  HCalReceiver.h  QIE_DataPacket.h  QieDataPacket.h  Receiver.h  TrigScintGenerator.h  TrigScintReceiver.h  TrigScint_SlowControlGenerator.h  TrigScint_SlowControlReceiver.h
software/emulators/src/emulators/: HCalGenerator.cxx  HCalReceiver.cxx  QIE_DataPacket.cxx  QieDataPacket.cxx  TrigScintGenerator.cxx  TrigScintReceiver.cxx  TrigScint_SlowControlGenerator.cxx  TrigScint_SlowControlReceiver.cxx  emulator.cxx  rce_prbs_tcp_server.cxx
software/eudaq/: CMakeLists.txt
software/eudaq/config/: 2021_file_read.conf  2021_test_beam.conf  2021_test_beam.ini  2021_test_beam_cern_TSMonitor_v0.conf  2021_test_beam_cern_v0.conf  2021_test_beam_cern_v0.ini  2021_test_beam_cern_v1.conf  2021_test_beam_cern_v1.ini  pf_pedestal.conf  polarfire.conf  polarfire.ini  polarfire_charge.conf  polarfire_external.conf  polarfire_hcal.conf  polarfire_led.conf  polarfire_pedestal.conf  polarfire_pedestal_singlemon.conf  sample_file_read.conf  sample_file_read.ini  test.conf  test.ini  trig_scint_file_read.conf  trig_scint_file_read.ini
software/eudaq/include/eudaq/: CSVParser.h  CaptanCircularBufferDataSender.h  CaptanTrigScintTestBeamProducer.h  DarkMonitor.h  DarkRunControl.h  DipClientProducer.h  FileReader.h  HCalDataSender.h  HCalTestBeamMonitor.h  HCalTestBeamProducer.h  HgcrocDataPacket.h  HgcrocFileReaderProducer.h  HgcrocRawDecode.h  PolarfireInterface.h  RogueDataSender.h  RogueTcpClientProducer.h  SimQIE.h  SimpleMonitor.h  TcpCommandGenerator.h  TestBeamDataCollector.h  TestBeamEventDisplayMonitor.h  TestBeamMonitor.h  TrigScintDataSender.h  TrigScintFileReaderProducer.h  TrigScintRawDecode.h  TrigScintTestBeamMonitor.h  TrigScintTestBeamProducer.h  TsReceiver.h
software/eudaq/src/eudaq/: CaptanCircularBufferDataSender.cxx  CaptanTrigScintTestBeamProducer.cxx  DarkMonitor.cxx  DarkRunControl.cxx  DipClientProducer.cxx  HCalDataSender.cxx  HCalTestBeamMonitor.cxx  HCalTestBeamProducer.cxx  HgcrocDataPacket.cxx  HgcrocFileReaderProducer.cxx  HgcrocRawDecode.cxx  PolarfireInterface.cxx  PolarfireProducer.cxx  RogueDataSender.cxx  RogueTcpClientProducer.cxx  SimQIE.cxx  SimpleMonitor.cxx  TcpCommandGenerator.cxx  TestBeamDataCollector.cxx  TestBeamEventDisplayMonitor.cxx  TestBeamMonitor.cxx  TrigScintDataSender.cxx  TrigScintFileReaderProducer.cxx  TrigScintRawDecode.cxx  TrigScintTestBeamProducer.cxx  TsReceiver.cxx  WRClientProducer.cxx
software/eudaq/src/eudaq/dip/: DipClientProducer.cxx
software/eudaq/src/eudaq/monitor/: DarkMonitor.cxx  DarkMonitor.h  HCalTestBeamMonitor.cpp  HCalTestBeamMonitor.cxx  HCalTestBeamMonitor.h  SimpleMonitor.cxx  TestBeamEventDisplayMonitor.cxx  TestBeamEventDisplayMonitor.h  TestBeamMonitor.cxx  TestBeamMonitor.h  TrigScintTestBeamMonitor.cxx  TrigScintTestBeamMonitor.h
software/eudaq/src/eudaq/pflib/: PolarfireProducer.cxx
software/eudaq/src/eudaq/wr/: WRClientProducer.cxx  WRClientProducer.h
software/eudaq/test/: testTcpCommandGenerator.cxx  testTsServer.cxx
software/pflib/: CMakeLists.txt
software/pflib/tool/: pftool.cc
software/rceScripts/: LdmxRceTcpServer.py  TcpCommandSlave.py  TsDataSender.py  TsSender.py  TsTcpCommandSlave.py  TsTcpServer.py  test_rogue_commands.py
software/rogue/: CMakeLists.txt
software/rogue/app/: ldmx_rogue_server.cxx
software/rogue/include/rogue/: Commands.h  TBStreamWriter.h  TcpCommandReceiver.h  TrigScintReceiver.h  TsUdpClient.h
software/rogue/src/rogue/: TBStreamWriter.cxx  TcpCommandReceiver.cxx  TrigScintReceiver.cxx  TsUdpClient.cxx  ldmx_rogue_server.cxx
software/test/: CMakeLists.txt
software/test/src/: testTcpCommandGenerator.cxx
software/utils/: CMakeLists.txt
software/utils/src/: receiveUdpTsPackets.cxx  sendTsConfigCommand.cxx  sendTsControlCommand.cxx
(+9 files in other folders)
